Update code for chapter 04